--- a/iwtros_moveit_configs/iiwa_moveit_config/config/controllers_hw.yaml
+++ b/iwtros_moveit_configs/iiwa_moveit_config/config/controllers_hw.yaml
@@ -1,5 +1,5 @@
 controller_list:
-  - name: PositionController
+  - name: PositionJointTrajectoryController
     action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
     default: true
