--- a/iwtros_gazebo/package.xml
+++ b/iwtros_gazebo/package.xml
@@ -49,6 +49,7 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>tinyxml</build_depend>
   <build_depend>cmake_modules</build_depend>
   <build_depend>gazebo_msgs</build_depend>
   <build_depend>gazebo_plugins</build_depend>
@@ -80,7 +81,6 @@
   <build_export_depend>laser_geometry</build_export_depend>
 
   <exec_depend>message_runtime</exec_depend>
-  <exec_depend>cmake_modules</exec_depend>
   <exec_depend>gazebo_msgs</exec_depend>
   <exec_depend>gazebo_plugins</exec_depend>
   <exec_depend>gazebo_ros</exec_depend>
