--- a/iwtros_moveit_configs/iiwa_moveit_config/config/controllers.yaml
+++ b/iwtros_moveit_configs/iiwa_moveit_config/config/controllers.yaml
@@ -11,10 +11,8 @@ controller_list:
       - iiwa_joint_5
       - iiwa_joint_6
       - iiwa_joint_7
-  - name: EffortJointInterface_wsg50_gripper_trajectory_controller
-    action_ns: follow_joint_trajectory
-    type: FollowJointTrajectory
+  - name: gripper_controller
+    action_ns: gripper_cmd
+    type: GripperCommand
     default: true
-    joints:
-      - wsg50_finger_left_joint
-      - wsg50_finger_right_joint
+    joints: [wsg50_finger_right_joint]
